--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:textColor="#ffff"
         app:layout_constraintTop_toBottomOf="@+id/TextViewTitle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
     <EditText
         android:id="@+id/EditTextPassword"
         android:layout_width="match_parent"
@@ -57,6 +57,7 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
+        android:id="@+id/TextViewRegisterLink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New user? Register Now"
@@ -67,6 +68,55 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ButtonSingIn"/>
+    <View
+        android:id="@+id/ViewRight_divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#ffff"
+        android:layout_marginBottom="8dp"
+
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/TextViewOtherWays"
+        app:layout_constraintEnd_toStartOf="@+id/TextViewOtherWays"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextViewRegisterLink"
+        app:layout_constraintVertical_bias="0.975"/>
+    <TextView
+        android:id="@+id/TextViewOtherWays"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="other methods"
+        android:gravity="center"
+        android:textColor="#ffff"
+        app:layout_constraintEnd_toStartOf="@+id/ViewLeft_Divider"
+        app:layout_constraintStart_toEndOf="@+id/ViewRight_divider"
+        app:layout_constraintTop_toBottomOf="@+id/TextViewRegisterLink"
+        app:layout_constraintLeft_toLeftOf="@+id/ViewRight_divider"
+        app:layout_constraintRight_toRightOf="@+id/ViewLeft_Divider"/>
+
+    <View
+        android:id="@+id/ViewLeft_Divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginRight="20dp"
+        android:background="#ffff"
+        app:layout_constraintBottom_toBottomOf="@+id/TextViewOtherWays"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/TextViewOtherWays"
+        app:layout_constraintTop_toTopOf="@+id/TextViewOtherWays"
+        tools:layout_editor_absoluteY="112dp"
+        tools:layout_editor_absoluteX="243dp"/>
+
+
+
 
 
 
