--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,6 +87,7 @@
         android:layout_marginLeft="110dp"
         android:layout_marginTop="14dp"
         android:text="SING UP"
+        android:onClick="Save"
         app:layout_constraintTop_toBottomOf="@+id/EditTextConfirmPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
