--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
-       app:showAsAction="always|withText"
+       app:showAsAction="ifRoom|withText"
        android:title="edit"/>
     <item
         android:id="@+id/exit"
         android:icon="@drawable/ic_exit"
-        app:showAsAction="always|withText"
+        app:showAsAction="ifRoom|withText"
         android:title="exit"/>
 </menu>
